# custom-ddp-controller

./: Cargo.toml  README.md  default.nix
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/pixels/: mod.rs  pixel.rs  pixelstrip.rs  pixelstripcommand.rs  pixelstripmanager.rs
core/src/pixels/modifiers/: mod.rs  rainbowoscillation.rs  temporal_oscillation.rs  temporal_progression.rs  waveout.rs
core/src/pixels/modifiers/display/: mod.rs  rainbow_oscillation.rs
core/src/pixels/modifiers/fadeout/: curtain.rs  dropout.rs  mod.rs
core/src/services/: mod.rs
dev/test_commands/: 01.sh  01_simple_get.sh  02.sh  02_preview.sh  02_rainbow.sh  03_single_pixel.sh  04_fadeout.sh
package/nix/: README.md
package/nix/git/: build.nix  build.sh
package/nix/local/: build.nix
src/: lib.rs  main.rs
src/displays/: demos.rs
src/pixels/: mod.rs  pixel.rs  pixelstrip.rs  pixelstripmanager.rs
src/services/: mod.rs
